--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.37.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start --no-inline-scripts",
+    "build": "react-scripts build --no-inline-scripts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
