connected weather data to be displayed in components

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Weather Extension",
   "name": "Weather Chrome Extension",
+  "description": "Simple and efficient extension to get all your weather information!",
   "permissions": [
     "geolocation"
   ],
@@ -10,14 +11,19 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
-    "default_title": "Weather Extension"
+    "default_title": "Weather Extension",
+    "default_icon": {
+      "16": "weather16.png",
+      "48": "weather48.png",
+      "128": "weather128.png"
+    }
   },
-  "icons": [
-    "weather16.png",
-    "weather48.png",
-    "weather128.png"
-  ],
-  "version": "1.0",
+  "icons": {
+    "16": "weather16.png",
+    "48": "weather48.png",
+    "128": "weather128.png"
+  },
+  "version": "1.0.0",
   "content_security_policy": {
     "script-src": "self",
     "object-src": "self"
