added functionality to store location options in chrome local storage. everything is prepped to move citydata.json to s3 bucket in aws.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,8 @@
   "name": "Weather Chrome Extension",
   "description": "Simple and efficient extension to get all your weather information!",
   "permissions": [
-    "geolocation"
+    "geolocation",
+    "storage"
   ],
   "host_permissions": [
     "*://*/*"
