--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.994.0",
     "lz-string": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
